<resources>
    <string name="app_name">Film Adda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="profile_details">Profile details</string>
    <string name="application_icon">Application icon</string>
    <string name="filmadda">FilmAdda</string>
    <string name="back_button">Back button</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="system">System</string>
    <string name="dark">Dark</string>
    <string name="country">Country</string>
    <string name="arrow">Arrow</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="developed_by">Developed by</string>
    <string name="about">About</string>
    <string name="about_app">This product uses the TMDB API but is not endorsed or certified by TMDB.</string>
    <string name="profile">Profile</string>
    <string name="log_in_or_sign_up">LOG IN or SIGN UP</string>
    <string name="log_in_note">In order to use extended features and rating capabilities of TMDB, as well as to get personal recommendations you will need to log in to your account. If you do not have an account, registering for an account is free and simple.</string>
    <string name="tab_layout">Tab layout</string>
    <string name="delete_media_from_list">Delete media from list</string>
    <string name="search">Search…</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="backdrop">Backdrop</string>
    <string name="welcome">Welcome</string>
    <string name="intro_1">Millions of movies, TV shows and people to discover. Explore now.</string>
    <string name="intro_2">Explore movies, get recommendations, and stay updated with the latest releases.</string>
    <string name="intro_3"> Enjoy movie info, watchlist, ratings, and cast profiles on your mobile.</string>
    <string name="search_tag">Search for Movies, Tv Shows, Persons and Collections</string>
    <string name="airing_today">Airing Today</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="tvshows">TvShows</string>
    <string name="people">People</string>
    <string name="username">Username</string>
    <string name="show_list">Show list</string>
    <string name="log_out">Log Out</string>
    <string name="this_list_is_empty">This list is empty</string>
    <string name="apply">Apply</string>
    <string name="selected_or_not_image_indicator">Selected or not image indicator</string>
    <string name="favourite">Favourite</string>
    <string name="watchlist">Watchlist</string>
    <string name="rated">Rated</string>
    <string name="warning_no_fav_movies">You haven\'t added any movie to favourite list.</string>
    <string name="warning_no_watchlist_movies">You haven\'t added any movie to watchlist.</string>
    <string name="warning_no_rated_movies">You haven\'t rated any movie yet.</string>
    <string name="warning_no_fav_tvShows">You haven\'t added any tv show to favourite list.</string>
    <string name="warning_no_watchlist_tvShows">You haven\'t added any tv show to watchlist.</string>
    <string name="warning_no_rated_tvShows">You haven\'t rated any tv show yet.</string>
    <string name="collections">Collections</string>
    <string name="no_search_result_found">No Search Result found</string>
    <string name="background_image">Background Image</string>
    <string name="movie_release_date">Movie release date</string>
    <string name="genres">Genres</string>
    <string name="user_score">User Score</string>
    <string name="votes">votes</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="add_to_favourite_list">Add to favourite list</string>
    <string name="rate">Rate</string>
    <string name="overview">Overview</string>
    <string name="about_movie">About movie</string>
    <string name="f">f</string>
    <string name="status">Status</string>
    <string name="original_title">Original title</string>
    <string name="budget">Budget</string>
    <string name="n_a">N/A</string>
    <string name="revenue">Revenue</string>
    <string name="production_countries">Production countries</string>
    <string name="production_companies">Production companies</string>
    <string name="spoken_languages">Spoken languages</string>
    <string name="original_language">Original language</string>
    <string name="watch_providers">Watch providers</string>
    <string name="buy">Buy</string>
    <string name="rent">Rent</string>
    <string name="stream">Stream</string>
    <string name="cast">Cast</string>
    <string name="view_pager">View Pager</string>
    <string name="see_reviews">See reviews</string>
    <string name="recommendations">Recommendations</string>
    <string name="no_videos_available">No videos available</string>
    <string name="videos">Videos</string>
    <string name="posters">Posters</string>
    <string name="backdrops">Backdrops</string>
    <string name="image">Image</string>
    <string name="view_collection">View collection</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="about_tv_show">About tv show</string>
    <string name="original_name">Original name</string>
    <string name="type">Type</string>
    <string name="no_of_seasons">No of seasons</string>
    <string name="no_of_episodes">No of episodes</string>
    <string name="last_season">Last season</string>
    <string name="episodes">Episodes</string>
    <string name="premiered_on">premiered on</string>
    <string name="view_all_seasons">View all seasons</string>
    <string name="season">Season</string>
    <string name="seasons">Seasons</string>
    <string name="zero">0</string>
    <string name="zero_zero">0.0</string>
    <string name="air_date">Air date</string>
    <string name="runtime">Runtime</string>
    <string name="known_for">Known for</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="biography">Biography</string>
    <string name="profiles">Profiles</string>
    <string name="movie_credits">Movie credits</string>
    <string name="crew">Crew</string>
    <string name="tv_credits">Tv credits</string>
    <string name="oops">Oops!</string>
    <string name="something_went_wrong_please_try_again_later">Something went wrong. Please try again later.</string>
    <string name="ok">OK</string>
    <string name="sharing_text">Discover, rate, and connect with entertainment through a single app- Film Adda.</string>
    <string name="no_movies_or_tv_shows_loaded_pleases_check_your_internet_connection">No Movies or Tv Shows loaded, pleases check your internet connection.</string>
    <string name="no_people_loaded_please_check_your_internet_connection">No people loaded, Please check your internet connection.</string>
    <string name="my_courses">My Courses</string>
    <string name="cart">Cart</string>
</resources>