<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.fragment.IntroFragment">

        <ImageView
            android:id="@+id/intro_backdrop_iv"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/backdrop"
            android:src="@drawable/custom_poster"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="#66014378"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/background_color"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/intro_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_1"
                android:textColor="@color/background_color"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </FrameLayout>
</layout>