<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/background_color">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oops"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:textColor="@color/background_color_rev"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/something_went_wrong_please_try_again_later"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:textColor="@color/background_color_rev"
            app:layout_constraintTop_toBottomOf="@id/tv1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_margin="16dp"
            android:textColor="@color/background_color"
            android:textStyle="bold"
            android:textSize="18sp"
            android:backgroundTint="@color/icon_bg_color"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>