<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/random_backdrop_iv"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/custom_backdrop"
            android:scaleType="centerCrop"
            android:foreground="@drawable/backdrop_frame"
            android:contentDescription="@string/backdrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@drawable/drop_elevation_2"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/list_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airing_today"
                    android:textColor="@color/icon_color"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <RadioGroup
                    android:id="@+id/radioGrp"
                    android:layout_width="135dp"
                    android:layout_height="35dp"
                    android:background="@drawable/drawable_radio_grp_tab_bg"
                    android:orientation="horizontal"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@id/list_name_tv"
                    app:layout_constraintBottom_toBottomOf="@id/list_name_tv"
                    app:layout_constraintEnd_toEndOf="parent">

                    <RadioButton
                        android:id="@+id/today_rb"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.50"
                        android:background="@drawable/drawable_unit_tab_selector"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/today"
                        android:textColor="@drawable/drawable_unit_tab_color_selector"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/this_weak_rb"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.50"
                        android:background="@drawable/drawable_unit_tab_selector"
                        android:button="@null"
                        android:checked="false"
                        android:gravity="center"
                        android:text="@string/this_week"
                        android:textColor="@drawable/drawable_unit_tab_color_selector"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/drop_elevation"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/media_people_list_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="10"
                tools:listitem="@layout/media_or_person_recycler_item" />

            <TextView
                android:id="@+id/warning_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/no_movies_or_tv_shows_loaded_pleases_check_your_internet_connection"
                tools:visibility="gone"/>

            <TextView
                android:id="@+id/emptyListWarningTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_list_is_empty"
                android:layout_gravity="start"
                android:textColor="@color/background_color_rev"
                android:textSize="16sp"
                android:padding="10dp"
                android:visibility="gone"
                android:background="#E6E6E6"/>

        </LinearLayout>
    </FrameLayout>
</layout>