<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:layout_marginHorizontal="4dp"
    android:layout_marginVertical="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/season_poster_iv"
        android:layout_width="100dp"
        android:layout_height="149.25dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/custom_poster"
        android:elevation="2dp"
        app:shapeAppearanceOverlay="@style/curvedCornerRadius"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/background_color"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/season" />
        <TextView
            android:id="@+id/season_no_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/background_color"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:textSize="16sp"
            tools:text="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="12dp">

        <TextView
            android:id="@+id/no_of_episodes_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/background_color"
            android:textStyle="bold"
            android:textSize="13sp"
            android:text="@string/n_a"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/background_color"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:textSize="13sp"
            android:text="@string/episodes"/>
    </LinearLayout>

</LinearLayout>