<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/icon_color">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/episode_no_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1)"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/background_color"/>
        <TextView
            android:id="@+id/episode_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:textSize="17sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginStart="5dp"
            android:textColor="@color/background_color"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/rating_frame_layout"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/rating_bg"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll1">

        <com.adiandrodev.filmadda.presentation.customview.RatingView
            android:id="@+id/rating_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            tools:ignore="TooDeepLayout" />

        <TextView
            android:id="@+id/rating_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/zero_zero"
            android:textColor="@color/background_color_rev"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="SmallSp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/ll1"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_date"
            android:textColor="@color/background_color"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/air_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:textColor="@color/background_color"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/ll2"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/runtime"
            android:textColor="@color/background_color"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/runtime_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:textColor="@color/background_color"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/ll3"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textColor="@color/background_color"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/overview_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:maxLines="4"
            android:ellipsize="end"
            android:textColor="@color/background_color"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/icon_bg_color"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintStart_toEndOf="@id/ll1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>