<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.activity.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:elevation="4dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/setting_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:minHeight="37dp"
                        android:minWidth="37dp"
                        android:layout_marginTop="19dp"
                        android:background="@drawable/icon_bg"
                        app:tint="@color/icon_color"
                        android:src="@drawable/icon_setting"
                        android:contentDescription="@string/settings"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <ImageButton
                        android:id="@+id/profile_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:minHeight="37dp"
                        android:minWidth="37dp"
                        android:layout_marginTop="19dp"
                        android:background="@drawable/icon_bg"
                        app:tint="@color/icon_color"
                        android:src="@drawable/icon_profile"
                        android:contentDescription="@string/profile_details"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/setting_button"/>

                    <ImageView
                        android:id="@+id/app_icon_iv"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/app_icon"
                        android:layout_marginVertical="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/application_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:clickable="false"
                        android:focusable="false"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/akaya_telivigala"
                        android:text="@string/filmadda"
                        android:textColor="@color/background_color_rev"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:clickable="false"
                        android:focusable="false"
                        app:layout_constraintStart_toEndOf="@id/app_icon_iv"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView">
        </androidx.fragment.app.FragmentContainerView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/bottom_nav_menu"
            app:itemIconSize="30dp"
            app:elevation="4dp"
            android:background="@color/icon_bg_color"
            app:itemTextColor="@color/background_color_rev"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>